# personal-life-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_gold_views.py  003_lifeos_sleep_workout_imports.py  004_sleep_recovery_daily.py  005_workout_daily_and_body_metrics.py  006_gold_gym_weekly_volume.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/v1/: dashboard.py  imports.py  ingest.py  sleep.py  workouts.py
backend/app/etl/: bronze_to_silver.py  runner.py  silver_to_gold.py
backend/app/models/: __init__.py  bronze.py  gold.py  silver.py
backend/app/schemas/: bronze.py  gold.py  imports.py  silver.py  sleep.py  workouts.py
backend/app/security/: dependencies.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/data-tools/: page.tsx
frontend/src/app/finance/: page.tsx
frontend/src/app/goals/: page.tsx
frontend/src/app/gym/: page.tsx
frontend/src/app/habits/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/money/: page.tsx
frontend/src/app/movies/: page.tsx
frontend/src/app/sleep/: page.tsx
frontend/src/app/statistics/: page.tsx
frontend/src/components/: GoalTracker.tsx  LifeCalendar.tsx  MediaFeed.tsx
frontend/src/lib/: api.ts  types.ts
(+6 files in other folders)
