[project]
name = "lifeos-backend"
version = "0.1.0"
description = "LifeOS Personal Data Warehouse — FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "sqlalchemy[asyncio]>=2.0.0,<2.1",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.14.0,<1.15",
    "pydantic-settings>=2.7.0,<2.8",
    "python-multipart>=0.0.18,<0.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "faker>=33.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
